--- a/tools/packages.yaml
+++ b/tools/packages.yaml
@@ -1095,6 +1095,11 @@ url: http://codelobsteride.com/#download
 activity: medium
 ---
 kind: url
+name: codex
+url: https://github.com/openai/codex/releases
+activity: high
+---
+kind: url
 name: codon
 url: https://github.com/exaloop/codon/releases
 activity: low
