--- a/tools/packages.yaml
+++ b/tools/packages.yaml
@@ -7775,6 +7775,11 @@ url: https://github.com/pypa/hatch/releases
 activity: medium
 ---
 kind: url
+name: py3_id
+url: https://github.com/di/id/releases
+activity: medium
+---
+kind: url
 name: py3_identify
 url: https://github.com/pre-commit/identify/tags
 activity: medium
@@ -7892,6 +7897,16 @@ activity: medium
 kind: url
 name: py3_referencing
 url: https://github.com/python-jsonschema/referencing/releases
+activity: medium
+---
+kind: url
+name: py3_requests
+url: https://github.com/psf/requests/releases
+activity: medium
+---
+kind: url
+name: py3_requests_toolbelt
+url: https://github.com/requests/toolbelt/tags
 activity: medium
 ---
 kind: url
