--- a/.github/workflows/Updater.yml
+++ b/.github/workflows/Updater.yml
@@ -40,7 +40,9 @@ jobs:
           fetch-depth: 0
       - name: Get generic automatically updatable packages
         id: get-packages
-        run: echo "packages=$(find tools/automatically_updatable_packages/ -exec basename {} ';' | xargs)" >> "$GITHUB_OUTPUT"
+        run: !
+          # shellcheck disable=SC2064
+          echo "packages=$(find tools/automatically_updatable_packages/ -exec basename {} ';' | xargs)" >> "$GITHUB_OUTPUT"
   generic-packages-update-checks:
     needs: generic-packages
     if: ${{ github.repository_owner == 'chromebrew' }}
