Fix run command for getting updatable packages

--- a/.github/workflows/Updater.yml
+++ b/.github/workflows/Updater.yml
@@ -40,9 +40,7 @@ jobs:
           fetch-depth: 0
       - name: Get generic automatically updatable packages
         id: get-packages
-        run: !
-          # shellcheck disable=SC2038
-          echo "packages=$(find tools/automatically_updatable_packages/ -exec basename {} ';' | xargs)" >> "$GITHUB_OUTPUT"
+        run: echo "packages=$(find tools/automatically_updatable_packages/ -exec basename {} ';' | xargs)" >> "$GITHUB_OUTPUT"
   generic-packages-update-checks:
     needs: generic-packages
     if: ${{ github.repository_owner == 'chromebrew' }}
