--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,5 +1,5 @@
 ---
-# Version 1.0
+# Version 1.1
 name: Build
 run-name: Build ${{ inputs.branch || github.ref_name }} for ${{ inputs.build-on }} by @${{ github.actor }}
 on:
@@ -407,14 +407,21 @@ jobs:
       - name: Add package build completion files.
         id: add-build-success-marks
         run: |
+          # Make crew do automatic gem installs to keep gem install
+          # output from cluttering up output.
+          gem install -N highline --conservative
+          gem install -N ptools --conservative
+          ruby bin/crew version
+          echo "Done installing required gems for crew."
           for file in $(echo "${CHANGED_PACKAGES}" | xargs basename -s .rb | xargs)
             do
-            which ruby
             ruby bin/crew prop ignore_updater ${file}
             [[ "$(ruby bin/crew prop ignore_updater ${file})" == "false" ]] && touch tools/automatically_updatable_packages/${file}
           done
       - uses: EndBug/add-and-commit@v9
         if: ${{ contains(needs.generate.result, 'success') }}
+        env:
+          GH_TOKEN: ${{ steps.get_workflow_token.outputs.token }}
         with:
           add: 'tools/automatically_updatable_packages'
           fetch: false
