--- a/.github/workflows/Generate-PR.yml
+++ b/.github/workflows/Generate-PR.yml
@@ -101,13 +101,15 @@ jobs:
             git checkout master && git fetch origin master
             git checkout "${{ inputs.branch || github.ref_name }}"
             git fetch origin "${{ inputs.branch || github.ref_name }}"
+            set +e
             CHANGED_PACKAGE_FILES=$(git diff --name-only master..${{ inputs.branch || github.ref_name }} | grep '^packages/')
+            set -e
             if [[ -n "${CHANGED_PACKAGE_FILES}" ]]; then
               # Convert "packages/foo.rb packages/bar.rb" (from steps.changed-files.outputs.packages_all_changed_files) into "foo bar"
               echo "CHANGED_PACKAGES=$(echo "${CHANGED_PACKAGE_FILES}" | xargs basename -s .rb | xargs)" >> "$GITHUB_ENV"
               echo "CHANGED_PACKAGES=$(echo "${CHANGED_PACKAGE_FILES}" | xargs basename -s .rb | xargs)" >> "$GITHUB_OUTPUT"
             else
-              echo "No Changed Files."
+              echo "No Changed Packages."
             fi
       - name: Determine glibc and architecture package compatibility
         id: get-compatibility
@@ -440,7 +442,9 @@ jobs:
             git checkout master && git fetch origin master
             git checkout "${{ inputs.branch || github.ref_name }}"
             git fetch origin "${{ inputs.branch || github.ref_name }}"
+            set +e
             CHANGED_PACKAGE_FILES=$(git diff --name-only master..${{ inputs.branch || github.ref_name }} | grep '^packages/')
+            set -e
             if [[ -n "${CHANGED_PACKAGE_FILES}" ]]; then
               # Convert "packages/foo.rb packages/bar.rb" (from steps.changed-files.outputs.packages_all_changed_files) into "foo bar"
               echo "CHANGED_PACKAGES=$(echo "${CHANGED_PACKAGE_FILES}" | xargs basename -s .rb | xargs)" >> "$GITHUB_ENV"
