--- a/.github/workflows/Updater-on-Demand.yml
+++ b/.github/workflows/Updater-on-Demand.yml
@@ -1,5 +1,5 @@
 ---
-# Version 1.2
+# Version 1.3
 name: Generate Updates PRs on Demand
 run-name: Generating Updates PRs on Demand using ${{ inputs.version_cmd_input }}
 on:
@@ -28,9 +28,6 @@ jobs:
       - uses: actions/checkout@v5
         with:
           persist-credentials: true
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '4.0.1'
       - name: Install Python pip
         run: sudo apt install -y python3-pip
       - name: Setup Git.
@@ -39,14 +36,11 @@ jobs:
           git config --global push.autoSetupRemote true
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-      - name: Check for updates.
-        id: update-checks
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '4.0.1'
+      - name: Install bin/crew gem dependencies
         run: |
-          set -x
-          export CI=true
-          git pull
-          git stash drop || true
-          echo "pwd is $(pwd)"
           # Install required gems.
           require_gem () {
             for g in "$@"
@@ -70,8 +64,15 @@ jobs:
           }
           require_gem regexp_parser dagwood ruby-libversion highline ptools cgi rubocop rubocop-chromebrew
           # Force creation of temporary device.json.
-          LD_LIBRARY_PATH=/usr/local/lib ruby bin/crew version
-          # Force creation of temporary device.json.
+          ruby bin/crew version
+      - name: Check for updates.
+        id: update-checks
+        run: |
+          set -x
+          export CI=true
+          git pull
+          git stash drop || true
+          echo "pwd is $(pwd)"
           # Run Update Checks...
           # LD_LIBRARY_PATH=/usr/local/lib ruby tools/version.rb -u -v "${{ inputs.version_cmd_input }}"
           UPDATABLE_PACKAGES="$(ruby tools/version.rb -j "${{ inputs.version_cmd_input }}" | jq -r '.[]|select(.updatable | contains("Yes"))|select(.update_status | contains("Outdated"))|.package' | xargs)"
