--- a/.github/workflows/Generate-PR.yml
+++ b/.github/workflows/Generate-PR.yml
@@ -1,5 +1,5 @@
 ---
-# Version 1.3
+# Version 1.4
 name: Generate PR
 run-name: Generate PR for ${{ inputs.branch || github.ref_name }} by @${{ github.actor }}
 on:
@@ -66,6 +66,14 @@ jobs:
       armv7l_packages: ${{ steps.get-compatibility.outputs.armv7l_PACKAGES }}
       matrix: ${{ steps.set-generate-matrix.outputs.matrix }}
     steps:
+      - name: Get GH Token
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@v4
+        with:
+          application_id: ${{ secrets.APPLICATION_ID }}
+          application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          organization: chromebrew
+          revoke_token: true
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
@@ -74,7 +82,7 @@ jobs:
       - name: Set PR to Draft
         id: set-to-draft
         env:
-          GH_TOKEN: ${{ secrets.CREW_PR_TOKEN }}
+          GH_TOKEN: ${{ steps.get_workflow_token.outputs.token }}
         run: |
           PR_NUMBER=$(gh pr list -L 1 -s open -H ${{ inputs.branch || github.ref_name }} | cut -f1)
           if [[ -n ${PR_NUMBER} ]]; then
