--- a/.github/workflows/Generate-PR.yml
+++ b/.github/workflows/Generate-PR.yml
@@ -1,5 +1,5 @@
 ---
-# Version 1.4
+# Version 1.5
 name: Generate PR
 run-name: Generate PR for ${{ inputs.branch || github.ref_name }} by @${{ github.actor }}
 on:
@@ -18,6 +18,9 @@ on:
         required: false
         type: boolean
         default: 'true'
+      packages_to_check_for_build:
+        description: "Specify additional packages to check for builds."
+        required: false
       branch:
         description: "Branch of chromebrew/chromebrew to run on, if different from this branch."
         required: false
@@ -101,24 +104,32 @@ jobs:
             # before continuing.
             gh pr update-branch || true
           fi
+      - name: Get Current HEAD hash
+        id: get-current-head
+        run: |
+          echo "CURRENT_HEAD=$(git ls-remote https://github.com/${{ github.repository }}.git | head -1 | sed 's/HEAD//')" >> "$GITHUB_OUTPUT"
+          echo "CURRENT_HEAD is $(git ls-remote https://github.com/${{ github.repository }}.git | head -1 | sed 's/HEAD//')"
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v47
+        with:
+          base_sha: ${{ steps.get-current-head.outputs.CURRENT_HEAD }}
+          files_yaml: |
+            packages:
+              - packages/*.rb
+          since_last_remote_commit: true
       - name: Export variables to github context
         id: changed-packages
         run: |
-            git config user.name "${{ github.actor }}"
-            git config user.email "${{ github.actor }}@users.noreply.github.com"
-            git checkout master && git fetch origin master
-            git checkout "${{ inputs.branch || github.ref_name }}"
-            git fetch origin "${{ inputs.branch || github.ref_name }}"
-            set +e
-            CHANGED_PACKAGE_FILES=$(git diff --name-only master..${{ inputs.branch || github.ref_name }} | grep '^packages/')
-            set -e
-            if [[ -n "${CHANGED_PACKAGE_FILES}" ]]; then
-              # Convert "packages/foo.rb packages/bar.rb" (from steps.changed-files.outputs.packages_all_changed_files) into "foo bar"
-              echo "CHANGED_PACKAGES=$(echo "${CHANGED_PACKAGE_FILES}" | xargs basename -s .rb | xargs)" >> "$GITHUB_ENV"
-              echo "CHANGED_PACKAGES=$(echo "${CHANGED_PACKAGE_FILES}" | xargs basename -s .rb | xargs)" >> "$GITHUB_OUTPUT"
-            else
-              echo "No Changed Packages."
+            # Add inputs.packages_to_check_for_build to the packages we
+            # will check for architecture and glibc compatibility.
+            if [[ -z "${{ steps.changed-files.outputs.packages_all_changed_files }} ${{ inputs.packages_to_check_for_build }}" ]]; then
+              echo "Branch ${{ inputs.branch || github.ref_name }} has no changed package files."
+              exit 1
             fi
+            # Convert "packages/foo.rb packages/bar.rb" (from steps.changed-files.outputs.packages_all_changed_files) into "foo bar"
+            echo "CHANGED_PACKAGES=$(echo "${{ steps.changed-files.outputs.packages_all_changed_files }} ${{ inputs.packages_to_check_for_build }}" | xargs basename -s .rb | sort -u | xargs)" >> "$GITHUB_ENV"
+            echo "CHANGED_PACKAGES=$(echo "${{ steps.changed-files.outputs.packages_all_changed_files }} ${{ inputs.packages_to_check_for_build }}" | xargs basename -s .rb | sort -u | xargs)" >> "$GITHUB_OUTPUT"
       - name: Determine glibc and architecture package compatibility
         id: get-compatibility
         run: |
@@ -305,6 +316,12 @@ jobs:
               echo "Skipping i686 container builds &/or package file updates."
               exit 0
             fi
+            case $PLATFORM in
+              linux/386)    CREW_ARCH_PACKAGES_ENCODED="$(echo ${i686_PACKAGES} | xxd -ps -c 0 | tr -d '\n')";;
+              linux/amd64)  CREW_ARCH_PACKAGES_ENCODED="$(echo ${x86_64_PACKAGES} | xxd -ps -c 0 | tr -d '\n')";;
+              linux/arm/v7) CREW_ARCH_PACKAGES_ENCODED="$(echo ${armv7l_PACKAGES} | xxd -ps -c 0 | tr -d '\n')";;
+              *)             echo "$PLATFORM not determined." && exit 1 ;;
+            esac
             # Container Cleanup
             # Adapted from https://github.com/BRAINSia/free-disk-space/blob/main/action.yml
             echo "Running some background container cleanups from BRAINSia/free-disk-space."
@@ -323,6 +340,14 @@ jobs:
             sudo setfacl -R -m u:1000:rwx .
             sudo setfacl -R -m u:1000:rwx /tmp/pkg_cache
             # See https://github.com/containerd/containerd/pull/7566#issuecomment-1461134737 for why we set ulimit.
+            # Pass in packages we might want to check for builds.
+            if [ -z ${CREW_ARCH_PACKAGES_ENCODED+x} ]; then
+              echo "${CREW_ARCH_PACKAGES_ENCODED} is not set."
+            else
+              ARCH_PACKAGES_PASSTHROUGH=-e
+              ARCH_PACKAGES_PASSTHROUGH+=" "
+              ARCH_PACKAGES_PASSTHROUGH+="CREW_ARCH_PACKAGES_ENCODED=${CREW_ARCH_PACKAGES_ENCODED}"
+            fi
             if [ -z ${CI+x} ]; then
               echo "CI is not set."
             else
@@ -350,6 +375,7 @@ jobs:
               -e GITLAB_TOKEN="${{ secrets.GITLAB_TOKEN }}" \
               -e GITLAB_TOKEN_USERNAME="${{ secrets.GITLAB_TOKEN_USERNAME }}" \
               ${CI_PASSTHROUGH} \
+              ${ARCH_PACKAGES_PASSTHROUGH} \
               ${CREW_MAX_BUILD_TIME_PASSTHROUGH} \
               -v /tmp/pkg_cache:/usr/local/tmp/packages:rshared \
               -v "$(pwd)":/output:rshared \
